--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@prisma/client": "^6.3.0",
     "@tabler/icons-react": "^3.29.0",
+    "@types/react-slick": "^0.23.13",
     "clsx": "^2.1.1",
     "motion": "^12.0.11",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^3.0.1",
     "zod": "^3.24.1"
   },
