--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@tabler/icons-react": "^3.29.0",
     "@types/react-slick": "^0.23.13",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.3.1",
     "motion": "^12.0.11",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-responsive": "^10.0.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^3.0.1",
