--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.4.0",
     "react-responsive": "^10.0.0",
     "react-slick": "^0.30.3",
