--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "type": "module",
   "prisma": {
-  "seed": "tsx ./prisma/seed.ts"
-},
+    "seed": "tsx ./prisma/seed.ts"
+  },
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -29,7 +29,8 @@
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.2",
     "tailwind-merge": "^3.0.1",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
