--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.3.0",
+    "@stripe/stripe-js": "^5.6.0",
     "@tabler/icons-react": "^3.29.0",
     "@types/react-slick": "^0.23.13",
     "clsx": "^2.1.1",
@@ -29,6 +30,7 @@
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.2",
     "tailwind-merge": "^3.0.1",
+    "use-shopping-cart": "^3.2.0",
     "zod": "^3.24.1",
     "zustand": "^5.0.3"
   },
