--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@stripe/stripe-js": "^5.6.0",
     "@tabler/icons-react": "^3.29.0",
     "@types/react-slick": "^0.23.13",
+    "better-auth": "^1.2.4",
     "clsx": "^2.1.1",
     "framer-motion": "^12.3.1",
     "motion": "^12.0.11",
